zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/enum_field_value_references_enum.zig
pub const Foo = enum(c_int) {
    a = 10,
    b = @intFromEnum(Foo.a) - 1,
};
export fn entry() void {
    _ = @as(Foo, .a);
}

// error
//
// :3:25: error: type 'tmp.Foo' depends on itself for field usage here
